# ai-video-gen-backend

./: .dockerignore  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_scene_content_only.py  0003_collection_item_storage_fields.py  0004_generation_jobs_and_item_status.py  0005_collection_item_job_id.py  0006_collection_hierarchy.py  0007_schema_driven_generation.py  0008_generation_runs_projection.py  0009_drop_generation_jobs.py  0010_collection_item_favorite_flag.py  0011_chat_threads_messages.py  0012_screenplay_foundation.py  0013_drop_legacy_scenes.py  0014_screenplay_xml_content.py  0015_shots_mvp.py  0016_project_aspect_ratio_and_shot_collection.py  4fe5f5908953_generation_jobs_and_item_status.py
docs/lld/: provider-agnostic-generation.md  schema-driven-generation-capabilities.md
src/ai_video_gen_backend/: main.py
tests/: conftest.py  support.py
tests/api/: test_chat_api.py  test_collections_api.py  test_health_api.py  test_projects_api.py  test_scenes_api.py  test_screenplays_api.py  test_shots_api.py
tests/integration/: test_collection_item_repository.py  test_constraints.py  test_generation_job_repository.py  test_scene_repository.py  test_shot_repository.py
tests/unit/: test_api_error_mapping.py  test_collection_use_cases.py  test_craft_shot_image_prompt_use_case.py  test_db_session.py  test_delete_collection_item_use_case.py  test_ensure_shot_visual_collection_use_case.py  test_fal_generation_provider.py  test_fal_model_registry.py  test_ffmpeg_video_thumbnail_generator.py  test_finalize_generation.py  test_generate_shot_visuals_use_case.py  test_generation_use_cases.py  test_get_generation_capabilities_use_case.py  test_get_generation_run_use_case.py  test_handle_fal_webhook_use_case.py  test_http_media_downloader.py  test_langgraph_chat_workflow.py  test_langgraph_postgres_checkpointer.py  test_nano_banana_mapper.py  (+15 more)
(+185 files in other folders)
